style: code cleanup fix: recipe fix: block shape